crates/carta/tests/snapshots/golden_writer__beamer__common__raw-html-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
text raw more
\end{frame}
