crates/carta/tests/snapshots/golden_writer__beamer__common__raw-latex-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\macro{value}
\end{frame}
