crates/carta/tests/snapshots/golden_writer__beamer__common__raw-latex-inline.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
a \macro b
\end{frame}
