crates/carta/tests/snapshots/golden_writer__beamer__common__smart-ellipsis-dashes.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
wait\ldots{} an en--dash and an em---dash
\end{frame}
