crates/carta/tests/snapshots/golden_writer__beamer__common__soft-break.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
first line second line
\end{frame}
