crates/carta/tests/snapshots/golden_writer__beamer__common__span-empty-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
{x}
\end{frame}
