crates/carta/tests/snapshots/golden_writer__beamer__common__span-semantic.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\protect\phantomsection\label{theid}{x} {term}
\end{frame}
