crates/carta/tests/snapshots/golden_writer__beamer__common__span.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
a \protect\phantomsection\label{s}{styled} word
\end{frame}
