crates/carta/tests/snapshots/golden_writer__beamer__common__subscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
water H\textsubscript{2}O and sub\textsubscript{ab} here
\end{frame}
