crates/carta/tests/snapshots/golden_writer__beamer__common__superscript-fallback.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
x super\textsuperscript{(ab)} here
\end{frame}
