crates/carta/tests/snapshots/golden_writer__beamer__common__tab-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
a	b \texttt{c	d}

\begin{verbatim}
	x	y
\end{verbatim}
\end{frame}
